2008-01-11  Dan Winship  <danw@gnome.org>

	* daemon/gvfsbackendhttp.c (g_vfs_backend_http_finalize): cleanup
	(g_vfs_backend_http_init): move session creation here. Don't
	explicitly set ASYNC_CONTEXT to g_main_context_default() because
	that trips up SoupInputStream.
	(uri_for_filename): create a SoupUri corresponding to a filename.
	In particular, "/" corresponds to mount_base, not the result of
	combining mount_base with "/".
	(try_open_for_read): use uri_for_filename, free the result.

2008-01-11  Dan Winship  <danw@gnome.org>

	* daemon/soup-input-stream.c (soup_input_stream_send)
	(wrapper_callback, soup_input_stream_send_async): Fix for changes
	to g_input_stream_set_pending() since I wrote this.

	* client/gdaemonfile.c (g_daemon_file_hash): x86_64 fix.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendhttp.c:
	Make http mount not user visible.
	Set backend mount spec in try_mount.

2008-01-11  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonvfs.c:
	Fix the double use of a counter variable inside nested loops.

	* client/Makefile.am:
	* client/httpuri.c:
	UriMapper added, which is needed for plain http method.
	
	* configure.ac:
	Check for libsoup version >= 2.2.104

	* daemon/gvfsbackendhttp.c:
	Initial implementation of plain http methods.

	* daemon/Makefile.am:
	* daemon/http.mount.in:
	Added.

	* daemon/soup-input-stream.c:
	* daemon/soup-input-stream.h:
	Import of Dan Winship's libsoup based streaming classes.

2008-01-11  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* configure.ac: Added "eu" (Basque) to ALL_LINGUAS.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
	Set can't write info on the root.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-mount.c (list_volumes):
	Fix crash if no mount in volume.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * common/gvfsdaemonprotocol.h: